--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "dbfc9a2f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 20\u001b[0m\n\u001b[0;32m     15\u001b[0m     y \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     16\u001b[0m Tcolor \u001b[38;5;241m=\u001b[39m col\u001b[38;5;241m.\u001b[39mnew(Tgrafo, [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m])\n\u001b[1;32m---> 20\u001b[0m sim(Tritmo, Tlimiar, Tfiltro, Tfinal, Tgrafo, Tcolor)\n",
-      "File \u001b[1;32m~\\Desktop\\EP_grafos-main\\simulation.py:66\u001b[0m, in \u001b[0;36msim\u001b[1;34m(Tritmo, Tlimiar, Tfiltro, Tfinal, Tgrafo, Tcolor)\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m event\u001b[38;5;241m.\u001b[39mkind(e) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mavaliacao\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;66;03m#se o proximo evento for avaliacao\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     idx \u001b[38;5;241m=\u001b[39m popu\u001b[38;5;241m.\u001b[39mident(p, event\u001b[38;5;241m.\u001b[39mident(e)) \u001b[38;5;66;03m#individuo a ser avaliado\u001b[39;00m\n\u001b[1;32m---> 66\u001b[0m     A \u001b[38;5;241m=\u001b[39m ind\u001b[38;5;241m.\u001b[39mcoef(idx) \u001b[38;5;66;03m#coeficiente de avaliacao do individuo do evento\u001b[39;00m\n\u001b[0;32m     68\u001b[0m     I \u001b[38;5;241m=\u001b[39m ct \u001b[38;5;241m-\u001b[39m ind\u001b[38;5;241m.\u001b[39midade(idx) \u001b[38;5;66;03m#idade do idividuo do evento\u001b[39;00m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m random() \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m/\u001b[39mpi)\u001b[38;5;241m*\u001b[39mmath\u001b[38;5;241m.\u001b[39matan((\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39mA)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m8\u001b[39m\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39mI)))): \u001b[38;5;66;03m# a formula dame um valor de 0 a 1, que sera a probabilidade de ocorrer morte, se o numero aleatorio de 0 a 1 for menor ou igual a esse valor, ele morre.\u001b[39;00m\n",
-      "File \u001b[1;32m~\\Desktop\\EP_grafos-main\\indivíduos.py:12\u001b[0m, in \u001b[0;36mcoef\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcoef\u001b[39m(i):\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m color\u001b[38;5;241m.\u001b[39mnum_erros(i[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m graph\u001b[38;5;241m.\u001b[39mdim(color\u001b[38;5;241m.\u001b[39mgrafo(i[\u001b[38;5;241m0\u001b[39m]))\u001b[38;5;241m/\u001b[39mcolor\u001b[38;5;241m.\u001b[39mnum_cores(i[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\Desktop\\EP_grafos-main\\colorações.py:28\u001b[0m, in \u001b[0;36mnum_erros\u001b[1;34m(c)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m j\u001b[38;5;241m<\u001b[39mgraph\u001b[38;5;241m.\u001b[39mdim(c[\u001b[38;5;241m0\u001b[39m]):\n\u001b[0;32m     27\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m graph\u001b[38;5;241m.\u001b[39medge(c[\u001b[38;5;241m0\u001b[39m],i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m): \u001b[38;5;66;03m#os pares (i+1,j+1) cobrem todos os pares de vértices de g\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m c[\u001b[38;5;241m1\u001b[39m][i]\u001b[38;5;241m==\u001b[39mc[\u001b[38;5;241m1\u001b[39m][j]: \u001b[38;5;66;03m#verifica se as cores de i+1 e de j+1 são iguais\u001b[39;00m\n\u001b[0;32m     29\u001b[0m             erros\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;66;03m#se forem iguais, há um erro\u001b[39;00m\n\u001b[0;32m     30\u001b[0m     j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guilh\\Desktop\\EP_grafos-main\\test.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guilh/Desktop/EP_grafos-main/test.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m Tgrafo \u001b[39m=\u001b[39m grafos\u001b[39m.\u001b[39maddedge(Tgrafo,\u001b[39m6\u001b[39m,\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guilh/Desktop/EP_grafos-main/test.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m Tcolor \u001b[39m=\u001b[39m \u001b[39m6\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guilh/Desktop/EP_grafos-main/test.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m simulador(Tgrafo, Tcolor, Tritmo, Tlimiar, Tfiltro, Tfinal)\n",
+      "File \u001b[1;32mc:\\Users\\guilh\\Desktop\\EP_grafos-main\\simulador.py:74\u001b[0m, in \u001b[0;36msimulador\u001b[1;34m(G, K, Tfim, Tritmo, Tlimiar, Tfiltro)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[39mif\u001b[39;00m event\u001b[39m.\u001b[39mkind(EventoAtual) \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mavaliação\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m#se o proximo evento for avaliação\u001b[39;00m\n\u001b[0;32m     73\u001b[0m     avaliado \u001b[39m=\u001b[39m pop\u001b[39m.\u001b[39mident(população, event\u001b[39m.\u001b[39mident(EventoAtual)) \u001b[39m#define o indivíduo a ser avaliado\u001b[39;00m\n\u001b[1;32m---> 74\u001b[0m     A \u001b[39m=\u001b[39m ind\u001b[39m.\u001b[39;49mcoef(avaliado) \u001b[39m#calcula o coeficiente de adaptação do avaliado\u001b[39;00m\n\u001b[0;32m     75\u001b[0m     I \u001b[39m=\u001b[39m CurrentTime \u001b[39m-\u001b[39m ind\u001b[39m.\u001b[39midade(avaliado) \u001b[39m#calcula a idade do avaliado\u001b[39;00m\n\u001b[0;32m     77\u001b[0m     \u001b[39mif\u001b[39;00m random\u001b[39m.\u001b[39mrandom() \u001b[39m<\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m-\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m/\u001b[39mpi)\u001b[39m*\u001b[39matan((\u001b[39m1\u001b[39m\u001b[39m+\u001b[39mA)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(\u001b[39m1\u001b[39m\u001b[39m+\u001b[39m\u001b[39m8\u001b[39m\u001b[39m/\u001b[39m(\u001b[39m1\u001b[39m\u001b[39m+\u001b[39mI)))): \u001b[39m#probabilidade do avaliado morrer\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\guilh\\Desktop\\EP_grafos-main\\indivíduos.py:12\u001b[0m, in \u001b[0;36mcoef\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcoef\u001b[39m(i):\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mif\u001b[39;00m color\u001b[39m.\u001b[39mnum_erros(i[\u001b[39m0\u001b[39;49m])\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m     13\u001b[0m         \u001b[39mreturn\u001b[39;00m graph\u001b[39m.\u001b[39mdim(color\u001b[39m.\u001b[39mgrafo(i[\u001b[39m0\u001b[39m]))\u001b[39m/\u001b[39mcolor\u001b[39m.\u001b[39mnum_cores(i[\u001b[39m0\u001b[39m])\n\u001b[0;32m     14\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
    "source": [
-    "from simulation import sim\n",
+    "from simulador import simulador\n",
     "import grafos \n",
     "import colorações  as col\n",
     "\n",
@@ -37,20 +36,32 @@
     "    Tgrafo = grafos.addedge(Tgrafo,x,y)\n",
     "    x += 1\n",
     "    y += 1\n",
-    "Tcolor = col.new(Tgrafo, [1,2,3,4,5,6])\n",
+    "Tgrafo = grafos.addedge(Tgrafo,6,1)\n",
+    "Tcolor = 6\n",
     "    \n",
     "\n",
     "\n",
-    "sim(Tritmo, Tlimiar, Tfiltro, Tfinal, Tgrafo, Tcolor)\n"
+    "simulador(Tgrafo, Tcolor, Tritmo, Tlimiar, Tfiltro, Tfinal)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "e3b4adef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cores = [x+1 for x in range(5)]\n",
+    "print (cores)"
+   ]
   },
   {
    "cell_type": "code",
@@ -85,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
